<resources>

    <string name="app_name">Final Project App</string>
    <string name="geo_enter_lat_long">Enter latitude and longitude for a location:</string>
    <string name="geo_type_latitude_here">Type latitude here</string>
    <string name="geo_type_longitude_here">Type longitude here</string>
    <string name="geo_find_nearby_cities">Search</string>
    <string name="geo_geo_location">Geo Location</string>
    <string name="geo_city_details">City Details</string>
    <string name="geo_name">Name:</string>
    <string name="geo_please_enter_lat">Please enter latitude</string>
    <string name="geo_please_enter_log">Please enter longitude</string>
    <string name="geo_location_instructions">Instructions - Geo Location</string>
    <string name="geo_location_instructions_message">🔍\nThis app will find the nearby cities around the given latitude-longitude location.\nYou can also find the details about those cities, such as country of that city, currency, and also you can open the location of the city on the google maps app.\n\n♥\nIf you like any city, you can save them as favorite so that you can access them later even offline.</string>
    <string name="geo_navigation_drawer_open">Open navigation drawer</string>
    <string name="geo_navigation_drawer_close">Close navigation drawer</string>
    <string name="geo_nav_header_desc">Navigation header</string>
    <string name="geo_city_search">City Search</string>
    <string name="geo_favorite_cities">Favorite Cities</string>
    <string name="meet_vora">Meet Vora</string>
    <string name="geo_help">Help</string>
    <string name="geo_country">Country:</string>
    <string name="geo_region">Region:</string>
    <string name="geo_currency">Currency:</string>
    <string name="geo_latitude">Latitude:</string>
    <string name="geo_longitude">Longitude:</string>
    <string name="geo_cities_loaded">Cities loaded!</string>
    <string name="geo_no_cities_loaded">No cities found</string>
    <string name="geo_added_to_fav">Added to favorite list</string>
    <string name="geo_removed_from_fav">Removed from favorite list</string>
    <string name="geo_about_this_project">About this project</string>
    <string name="geo_about_the_project">This is %s activity,\nwritten by Meet Vora</string>
    <string name="geo_instructions_for_this_app">Instructions for this app</string>
    <string name="geo_about_the_api">About the API</string>
    <string name="geo_donate_to_project">Donate to project</string>
    <string name="geo_city_list">City List</string>
    <string name="geo_donate_title">Please give generou$ly</string>
    <string name="geo_donate_message">How much money do you want to donate?</string>
    <string name="geo_thank_you">Thank you</string>
    <string name="geo_dollars">$$$</string>
    <string name="geo_thank_you_for_donation">Thank you for the donation</string>

    <string name="match_date">Date and Time of the Match</string>
    <string name="team1">Team 1</string>
    <string name="vs">VS</string>
    <string name="team2">Team 2</string>
    <string name="url">Match Highlights</string>
    <string name="soccer_about_the_project">This is Soccer Match Application. By Vraj Shah</string>
    <string name="about_app">This is Soccer Match Application. By Vraj Shah</string>
    <string name="soccer_donate">Donate</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="soccer_instructions">Soccer Matches - Instructions </string>
    <string name="soccer_instructions_message">You can watch latest soccer matches details and highlights from this application. Also you can add matches to favourites to watch it later.</string>
    <string name="soccer_donate_title">Please Donate</string>
    <string name="soccer_donate_message">How much would you like to donate today?</string>
    <string name="soccer_thank_you">Thank you!!</string>
    <string name="soccer_thank_you_for_donation">Thank you for your donation</string>
    <string name="favourite">Add to favourites</string>
    <string name="allmatch_button">Display all soccer matches</string>
    <string name="favsoccer_button">Display favorite soccer matches</string>
    <string name="last_watched_highlight">Last watched Match Highlight</string>
    <string name="soccer_title">Soccer Matches</string>
    <string name="name">By Vraj Shah</string>
    <string name="fav">Favourites</string>
    <string name="geo_title">Geo data source</string>
    <string name="lyrics_title">Song Lyrics Search</string>
    <string name="deezer_title">Deezer Song Search</string>
    <string name="about">About</string>
    <string name="soccer_title2">Soccer Highlights</string>
    <string name="about_application">About the Application</string>
    <string name="soccer_instruction">Instruction for the API</string>
    <string name="toast">Added to Favorites!</string>
    <string name="snack">Removed from favourites!!</string>
    <string name="toastButton">There is no record for last watched highlights</string>


    <string name="search_hint">Enter artist name</string>
    <string name="search_hint_song_name">Enter song name</string>
    <string name="savebutton">Save</string>
    <string name="deletebutton">Delete</string>
    <string name="googlebutton">Google Search</string>
    <string name="help">Info and help</string>
    <string name="lyrics_help">Author: Shruti Patel
        \n Version: 1.0
        \n Instructions: Find any songs, type in the search box and click the search button. Save the songs by clicking the info where you will get options to save or delete. To find all stored songs, click on the stored songs.</string>
    <string name="save_activity">Saved Items</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="Navlyricssreach">Song Lyrics</string>
    <string name ="navfavsongs">Favorite songs</string>
    <string name ="navinst">about the app</string>
    <string name ="navapi">API</string>
    <string name ="navdon">Donate</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name = "shruti"> Shruti Patel</string>
    <string name="donate_title">Please donate here</string>
    <string name="donate_message">How much amount?</string>
    <string name="thank_you">Thankyou</string>
    <string name="dollars">$$$</string>
    <string name="song_lyrics_search">Song Lyrics Search</string>
    <string name="lyricsinstrustions">Instructions</string>
    <string name="lyricsinstrutionsmessage">Enter artist and song name to search the lyrics by clicking the icon.</string>
</resources>


