<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_geo_data_source"
        app:showAsAction="always"
        android:icon="@drawable/geo"
        android:title="@string/geo_title" />
    <item
        android:id="@+id/nav_song_lyrics_search"
        app:showAsAction="always"
        android:icon="@drawable/song_lyrics"
        android:title="@string/lyrics_title" />
    <item
        android:id="@+id/nav_deezer_song_search"
        app:showAsAction="always"
        android:icon="@drawable/song"
        android:title="@string/deezer_title" />

    <item
        android:id="@+id/menuItemAboutProject"
        app:showAsAction="never"
        android:title="@string/about" />

</menu>