<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vrajsoccer.SoccerDetails">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/match_date"/>
        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_toRightOf="@+id/date"/>

        <TextView
            android:id="@+id/team1"
            android:layout_marginTop="70dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/team1"
            android:layout_below="@+id/date"/>

        <TextView
            android:id="@+id/team1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:layout_below="@+id/team1"/>

        <TextView
            android:id="@+id/vs_tv"
            android:layout_marginTop="100dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/vs"
            android:layout_below="@+id/team1"/>

        <TextView
            android:id="@+id/team2"
            android:layout_marginTop="70dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/team2"
            android:layout_below="@+id/vs_tv"/>

        <TextView
            android:id="@+id/team2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:layout_below="@+id/team2"/>

        <CheckBox
            android:id="@+id/favMatch"
            android:layout_below="@+id/team2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="70dp"
            android:text="Add to favourite"/>


        <Button
            android:id="@+id/url_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/url"
            android:textSize="20dp"/>



    </RelativeLayout>

</LinearLayout>