<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vrajsoccer.SoccerMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <ImageView
                android:id="@+id/ivHeader"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/soccer"
                android:tint="@color/white"
                android:layout_centerInParent="true"
                android:paddingTop="8dp" />

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivHeader"
                android:paddingTop="8dp"
                android:text="@string/soccer_title"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </RelativeLayout>

        <Button
            android:id="@+id/allMatches"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/allmatch_button"
            />

        <Button
            android:id="@+id/favMatches"
            android:text="@string/favsoccer_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            />

        <Button
            android:id="@+id/lastHighlight"
            android:text="@string/last_watched_highlight"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_soccer_match"
        app:menu="@menu/soccer_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>